Mobile menu overflow fixed

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,7 +8,7 @@ body {
 	background-color: #090909;
 	color: #fff;
 	font-size: 1.6rem;
-	.opened {
-		overflow: hidden;
-	}
+}
+.overflow {
+	overflow: hidden;
 }
